--- a/LAYME_SALAS_UNIVERSIDADES1/pruebas/html/styles.css
+++ b/LAYME_SALAS_UNIVERSIDADES1/pruebas/html/styles.css
@@ -12,7 +12,7 @@ body {
     background-position: center;
     overflow-y: auto;
     padding-top: 50px;
-    background-image: url('fondo.jpg');
+    background-image: url('https://www.sunedu.gob.pe/wp-content/uploads/2019/06/foto-fachada-sunedu-06.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
